--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -35,6 +35,7 @@ input[type=email] {
 
 #signup {
   font-size: 42pt;
+  font-family: "Arapey";
   color: white;
   margin-bottom: 10px;
 }
@@ -84,8 +85,7 @@ h1 {
 
 .edit_form {
   text-align: left;
-  padding: 5px 15px 5px 10px;
-  width: 250px;
+  padding: 5px 0px 5px 0px;
   display: inline-block;
   width: 100%;
 }
@@ -235,6 +235,7 @@ textarea {
   width: 450px;
   text-align: left;
   margin-left: 45px;
+  word-wrap: break-word;
 }
 
 //Styling for users index
